src/objects/JBCXM__OrderTransactionMap__c.object
<CustomObject>
    <description>Junction Object used to link each &quot;Order Type (Booking Type)&quot; with applicable &quot;Transaction Lines&quot;.</description>
    <fields>
        <fullName>JBCXM__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check weather the order transaction type is active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__DisplayOrder__c</fullName>
        <inlineHelpText>Display order to be used when displaying the Transactions based on the Booking type.</inlineHelpText>
        <label>Display Order</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__OrderType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select Booking Type.</description>
        <inlineHelpText>Select Booking Type.</inlineHelpText>
        <label>Order Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>JBCXM__PickList__c.JBCXM__Category__c</field>
                <operation>equals</operation>
                <value>Order Type</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Order Transaction Map</relationshipLabel>
        <relationshipName>OrderTransactionMapOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__TransactionType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Transaction line items mapped to the booking.</description>
        <inlineHelpText>Transaction line items mapped to the booking.</inlineHelpText>
        <label>TransactionType</label>
        <referenceTo>JBCXM__TransactionType__c</referenceTo>
        <relationshipLabel>Order Transaction Map</relationshipLabel>
        <relationshipName>OrderTransactionMapTransaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Transaction Map</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>OrderTransactionMap Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Transaction Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>